# lighter-quant-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/agents/: lighter-trader.agent.md
benches/: market_data_bench.rs
config/: settings.robinhood.yaml  settings.yaml
scripts/: debug_console.py  dev.sh  download_data.sh  generate_test_data.py  run_backtest.sh  run_live.sh  setup.sh
src/: main.rs
src/backtest/: engine.rs  metrics.rs  mod.rs  replay.rs
src/dashboard/: server.rs
src/dashboard/ui/: ai.html  ai.js  app.js  index.html
src/data/: loader.rs  mod.rs  storage.rs
src/lighter/: auth.rs  client.rs  error.rs  ffi.rs  mod.rs  symbols.rs  types.rs  websocket.rs
src/risk/: risk_manager.rs
src/strategy/: dca_strategy.rs  grid_strategy.rs  mod.rs  trend_strategy.rs
src/utils/: config.rs  logger.rs
